mockiato/tests/ui/non_trait_items.rs
use mockiato::mockable;

#[mockable]
struct Foo {}

#[mockable]
enum Foo {}

#[mockable]
fn foo() {}

#[mockable]
type Foo = usize;

fn main() {}
